src/objects/Site__c.object
<CustomObject>
    <fields>
        <fullName>AccountNameFormula__c</fullName>
        <formula>Account__r.Navision_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountNameFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Arrival_Time_mins__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Please enter the number of minutes clients are require to arrive prior to their appointment.
T-459746</description>
        <inlineHelpText>Please enter the number of minutes clients are require to arrive prior to their appointment.</inlineHelpText>
        <label>Arrival Time (mins)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Atlas_Site_Billing_Number__c</fullName>
        <displayFormat>SIT-{000000}</displayFormat>
        <label>Atlas Site Billing Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>BASE__c</fullName>
        <description>T-568505
S-455689 : Billing Report :Site - new fields</description>
        <label>BASE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ABZ</fullName>
                </value>
                <value>
                    <fullName>INV</fullName>
                </value>
                <value>
                    <fullName>GLA</fullName>
                </value>
                <value>
                    <fullName>HFD</fullName>
                </value>
                <value>
                    <fullName>DYC</fullName>
                </value>
                <value>
                    <fullName>DUN</fullName>
                </value>
                <value>
                    <fullName>OTH</fullName>
                </value>
                <value>
                    <fullName>DUB</fullName>
                </value>
                <value>
                    <fullName>AFG</fullName>
                </value>
                <value>
                    <fullName>ABZ Aberdeen</fullName>
                    <isActive>false</isActive>
                    <label>ABZ Aberdeen</label>
                </value>
                <value>
                    <fullName>AFG Afghanistan</fullName>
                    <isActive>false</isActive>
                    <label>AFG Afghanistan</label>
                </value>
                <value>
                    <fullName>DUB Dubai</fullName>
                    <isActive>false</isActive>
                    <label>DUB Dubai</label>
                </value>
                <value>
                    <fullName>DUN Dunfermline</fullName>
                    <isActive>false</isActive>
                    <label>DUN Dunfermline</label>
                </value>
                <value>
                    <fullName>DYC Dyce</fullName>
                    <isActive>false</isActive>
                    <label>DYC Dyce</label>
                </value>
                <value>
                    <fullName>GLA Glasgow</fullName>
                    <isActive>false</isActive>
                    <label>GLA Glasgow</label>
                </value>
                <value>
                    <fullName>HFD Hereford</fullName>
                    <isActive>false</isActive>
                    <label>HFD Hereford</label>
                </value>
                <value>
                    <fullName>INV Inverness</fullName>
                    <isActive>false</isActive>
                    <label>INV Inverness</label>
                </value>
                <value>
                    <fullName>OTH Other Network</fullName>
                    <isActive>false</isActive>
                    <label>OTH Other Network</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Site_Number__c</fullName>
        <formula>if(isblank(SAP_Customer_ID__c), Atlas_Site_Billing_Number__c, SAP_Customer_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Historical (Chrysalis / SAP) billing location number or Atlas billing site number</inlineHelpText>
        <label>Location Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chaperone_Notification_Process__c</fullName>
        <label>Chaperone Notification Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chrysalis_Site_ID__c</fullName>
        <externalId>true</externalId>
        <label>Chrysalis Site ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinic_Code__c</fullName>
        <description>I-256192: Add Clinic Code field to Site</description>
        <label>Clinic Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Additional_Information__c</fullName>
        <label>Description / Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disembarkation_notification_Process__c</fullName>
        <label>Disembarkation notification Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXID__c</fullName>
        <externalId>true</externalId>
        <label>EXID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Enable_Auto_Scheduler__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Auto Scheduler</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Bundle_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>T-574776</description>
        <label>Exclude from Bundle Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset_location__c</fullName>
        <label>Fixed Asset location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Google_Map_URL__c</fullName>
        <description>to be used on email confirmation template</description>
        <label>Google Map URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Iqarus_chaperone_service_required__c</fullName>
        <label>Iqarus chaperone service required?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lock_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lock Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medevac_Assessment_location__c</fullName>
        <label>Medevac Assessment location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medic_Log_use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to ensure Site is available for choice in the Medic Log</description>
        <label>Medic Log use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OIM_Details__c</fullName>
        <label>OIM/Captain Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Region__c</fullName>
        <label>Other Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_of_mobilisation__c</fullName>
        <label>Point of mobilisation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>West of Shetland</fullName>
                </value>
                <value>
                    <fullName>East of Shetland</fullName>
                </value>
                <value>
                    <fullName>North North Sea</fullName>
                </value>
                <value>
                    <fullName>South North Sea</fullName>
                </value>
                <value>
                    <fullName>Irish Sea</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Customer_ID__c</fullName>
        <description>Text length is set to 10, as this is the character limit for the corresponding field in NAV</description>
        <inlineHelpText>The SAP or NAV customer ID. e.g. ERL001</inlineHelpText>
        <label>NAV Customer ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SickBayEmail__c</fullName>
        <label>Sick Bay Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SickBayPhone__c</fullName>
        <label>Sick Bay Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Site_Sub_Type__c</fullName>
        <label>Site Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Site_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Iqarus</fullName>
                </value>
                <value>
                    <fullName>Iqarus Managed</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <label>Site Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Clinic</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Onshore Asset</fullName>
                </value>
                <value>
                    <fullName>Offshore Asset</fullName>
                </value>
                <value>
                    <fullName>Vessel</fullName>
                </value>
                <value>
                    <fullName>Industrial Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the Site.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Topside_Diving__c</fullName>
        <label>Topside/Diving?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Diving/Topside</fullName>
                </value>
                <value>
                    <fullName>Topside only</fullName>
                </value>
                <value>
                    <fullName>No Topside/Diving cover</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Site_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Only_admins_can_edit_locked_records</fullName>
        <active>true</active>
        <errorConditionFormula>Lock_Down__c &amp;&amp;   NOT( $Profile.Name  = &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Only admins can edit locked records.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OtherRegionField</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Region__c , &apos;Other&apos;)</errorConditionFormula>
        <errorDisplayField>Other_Region__c</errorDisplayField>
        <errorMessage>Please add Other Region short description.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Site_Name_Char_Limit</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Name) &gt; 72</errorConditionFormula>
        <errorMessage>Site name can not be longer than 72 chars.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Site_Name_Not_Contains_Comma</fullName>
        <active>false</active>
        <description>I-260725 : CSV export issue - Commas not allowed in fields</description>
        <errorConditionFormula>CONTAINS( Name , &apos;,&apos;)</errorConditionFormula>
        <errorMessage>You can&apos;t enter comma in Site Name.</errorMessage>
    </validationRules>
</CustomObject>